--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "dot-prop": ">=5.1.1",
     "mongojs": "^3.1.0",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0"
