--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "cors": "^2.8.5",
+    "dot-prop": ">=5.1.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "dot-prop": ">=5.1.1",
     "mongojs": "^3.1.0",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0"
