--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "http://jinj95.github.io/Google-Books-Search",
   "name": "mern",
   "version": "1.0.0",
   "description": "Mern Demo",
